fix name overflow

--- a/src/components/PageComponents/ProfilePage/MapperDetails/ProfileInfo/style.module.scss
+++ b/src/components/PageComponents/ProfilePage/MapperDetails/ProfileInfo/style.module.scss
@@ -21,7 +21,7 @@
     .mapperName {
       position: relative;
       display: flex;
-      width: 21rem;
+      width: 19.5rem;
       height: 3rem;
 
       font-family: 'Comfortaa Variable';
